# API-Fussion

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/app/api/: routes_system.py  routes_v1.py
backend/src/app/connectors/: github.py  hackernews.py  rss.py
backend/src/app/core/: config.py  http.py  middleware.py
backend/src/app/db/: init.py  models.py  session.py
backend/src/app/models/: logs.py  search.py  sources.py
backend/src/app/services/: aggregator.py  logs.py  source_probe.py  sources_status.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  router.tsx
frontend/src/components/: NavLink.tsx  Shell.tsx
frontend/src/lib/: api.ts  apiClient.ts  mockApi.ts  types.ts  useDebouncedValue.ts
frontend/src/pages/: LogsPage.tsx  SearchPage.tsx  SourcePage.tsx
