[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "feedparser==6.0.11",
    "httpx==0.27.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.30.6",
]
